# AlphaX_HR_Suite_v0_3_0

./: README.md  hooks.py  patches.txt  pyproject.toml
alphax_hr_leave_payroll/: install.py  modules.txt
alphax_hr_leave_payroll/api/: employee.py  entitlement.py  leave_allocation.py  salary_slip.py
alphax_hr_leave_payroll/config/: desktop.py
alphax_hr_leave_payroll/doctype/eosb_settlement/: eosb_settlement.json  eosb_settlement.py
alphax_hr_leave_payroll/doctype/hr_benefit_profile/: hr_benefit_profile.json  hr_benefit_profile.py
alphax_hr_leave_payroll/doctype/hr_benefit_service_slab/: hr_benefit_service_slab.json  hr_benefit_service_slab.py
alphax_hr_leave_payroll/doctype/hr_benefit_settings/: hr_benefit_settings.json  hr_benefit_settings.py
alphax_hr_leave_payroll/doctype/hr_eosb_provision_log/: hr_eosb_provision_log.json  hr_eosb_provision_log.py
alphax_hr_leave_payroll/fixtures/: custom_field.json
alphax_hr_leave_payroll/patches/: v0_2.py  v0_3.py  v0_4.py  v0_5.py
alphax_hr_leave_payroll/report/employee_eosb_liability/: employee_eosb_liability.json  employee_eosb_liability.py
alphax_hr_leave_payroll/report/employee_leave_entitlement_matrix/: employee_leave_entitlement_matrix.json  employee_leave_entitlement_matrix.py
alphax_hr_leave_payroll/tests/: test_policy.py
alphax_hr_leave_payroll/utils/: policy.py  scheduler.py
